fix: odd items not align in left bug

--- a/pages/posts/components/index.module.scss
+++ b/pages/posts/components/index.module.scss
@@ -7,6 +7,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   box-sizing: border-box;
+  margin-right: auto;
   &:after {
     content: " ";
     width: 28%;
